# https://packaging.python.org/ja/latest/guides/writing-pyproject-toml/
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-gui-tutorial"
dynamic = ["version"]
dependencies = ["TkEasyGUI"]
requires-python = ">= 3.7"
authors = [{ name = "yu9824" }]
maintainers = [{ name = "yu9824" }]
description = ""
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = []
# https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
] # https://pypi.org/classifiers/

[project.optional-dependencies]
test = ["pytest"]
dev = ["twine", "wheel", "build"]
docs = ["sphinx", "sphinx_rtd_theme", "sphinx-markdown-tables", "recommonmark"]
gui = ["PySimpleGUI"]

[project.urls]
Homepage = "https://github.com/yu9824/python-gui-tutorial"
# Documentation = "https://readthedocs.org"
PyPI = "https://pypi.org/project/python-gui-tutorial/"
Source = "https://github.com/yu9824/python-gui-tutorial"
Tracker = "https://github.com/yu9824/python-gui-tutorial/issues"
Changelog = "https://github.com/yu9824/python-gui-tutorial/blob/main/CHANGELOG.md"

[project.scripts]
python-gui-tutorial-cli = "python_gui_tutorial._main:main"

[project.gui-scripts]
python-gui-tutorial-gui = "python_gui_tutorial._main:main"

[tool.setuptools.dynamic]
version = { attr = "python_gui_tutorial.__version__" }

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
unfixable = ["F401"]
